--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "robofriends",
+  "homepage": "https://dr2Martin.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.0",
-    "tachyons": "^4.11.1"
+    "@testing-library/jest-dom": "5.11.2",
+    "@testing-library/react": "10.4.8",
+    "@testing-library/user-event": "12.1.1",
+    "gh-pages": "^3.1.0",
+    "jquery": "^3.5.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.2",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
